Mucked with platformio.ini stuff to get samples to build right. black magic.

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,43 +11,36 @@
 ; NOTE: When changing these platformio.ini files it sometimes helps to delete
 ; the ./.pio folder before rebuilding.
 
-[paltformio]
-src_dir = examples
+[platformio]
+src_dir = examples\TelnetServer
 
-[env:shell_mega2560]
+[common_env_data]
+build_flags = 
+	-D __ASSERT_USE_STDERR
+lib_deps_builtin = 
+	SPI
+	Wire
+lib_deps_external = 
+; Uncomment this to use the locally-built verison of the ArudinoShell library
+	arduino-libraries/Ethernet@^2.0.0
+	file://src
+
+[env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+build_flags = 
+	${common_env_data.build_flags}
+debug_build_flags =
+	-Og
+	-g2
+	-DDEBUG
+	-DAVR8_BREAKPOINT_MODE=1	
 lib_deps = 
- 	SPI
- 	Wire
-	arduino-libraries/Ethernet@^2.0.0
+	${common_env_data.lib_deps_builtin}
+	${common_env_data.lib_deps_external}
 
-; [common_env_data]
-; build_flags = 
-; 	-D __ASSERT_USE_STDERR
-; lib_deps_builtin = 
-; 	SPI
-; 	Wire
-; lib_deps_external = 
-; ; Uncomment this to use the locally-built verison of the ArudinoShell library
-; 	file://src
-; 	arduino-libraries/Ethernet@^2.0.0
 
-; [env:shell_mega2560]
-; platform = atmelavr
-; board = megaatmega2560
-; framework = arduino
-; monitor_speed = 115200
-; upload_speed = 115200
-; build_flags = 
-; 	${common_env_data.build_flags}
-; debug_build_flags =
-; 	-Og
-; 	-g2
-; 	-DDEBUG
-; 	-DAVR8_BREAKPOINT_MODE=1	
-; lib_deps = 
-; 	${common_env_data.lib_deps_builtin}
-; 	${common_env_data.lib_deps_external}
 
