got example working

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,5 +42,20 @@ lib_deps =
 	${common_env_data.lib_deps_builtin}
 	${common_env_data.lib_deps_external}
 
-
+[env:esp32thing_plus]
+platform = espressif32
+board = esp32thing_plus
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+build_flags = 
+	${common_env_data.build_flags}
+debug_build_flags =
+	-Og
+	-g2
+	-DDEBUG
+	-DAVR8_BREAKPOINT_MODE=1	
+lib_deps = 
+	${common_env_data.lib_deps_builtin}
+	${common_env_data.lib_deps_external}
 
